# maze-solver

./: CMakeLists.txt  Cell.cpp  Cell.h  ImageToMaze.cpp  Maze.cpp  Maze.h  MazeToImage.cpp  main.cpp  maze_solver  maze_solver_single_thread  script.sh  script2.sh  script3.sh
profiling/: output.txt  prof.out
results/: 10_threads_100_p.txt  12_threads_100_p.txt  14_threads_100_p.txt  16_threads_100_p.txt  16_threads_16_p.txt  18_threads_100_p.txt  18_threads_18_p.txt  1_threads_100_p.txt  1_threads_100_p_cout.txt  1_threads_100_p_no250.txt  1_threads_1_p.txt  20_threads_100_p.txt  22_threads_100_p.txt  24_threads_100_p.txt  26_threads_100_p.txt  28_threads_100_p.txt  2_threads_100_p.txt  30_threads_100_p.txt  4_threads_100_p.txt  4_threads_4_p.txt  6_threads_100_p.txt  8_threads_100_p.txt  8_threads_10_p.txt  8_threads_8_p.txt
results/old/: 10_threads_100_p.txt  10_threads_10_p.txt  12_threads_12_p.txt  14_threads_100_p.txt  14_threads_14_p.txt  1_threads_1_p.txt  20_threads_100_p.txt  20_threads_20_p.txt  2_threads_100_p.txt  2_threads_2_p.txt  4_threads_4_p.txt  6_threads_100_p.txt  6_threads_6_p.txt
results_postproc/: graphs.py  results.csv  results.py  results_100_p.csv
